--- a/app/views/landing/bishal2.html.erb
+++ b/app/views/landing/bishal2.html.erb
@@ -1,101 +1,213 @@
-    <!-- Devices v2 Section -->
-    <div class="u-gradient-half-primary-v1 u-devices-v2">
-        <div class="container u-space-3 position-relative z-index-2">
-            <!-- Title -->
-            <div class="w-md-80 w-lg-50 text-center mx-auto">
-                <span class="u-icon bg-white u-icon--xl rounded-circle mb-4">
-                    <span class="fas fa-paper-plane text-primary u-icon__inner font-size-32"></span>
-                </span>
-                <h2 class="h1 text-white"> <span class="font-weight-bold">inSiti</span> Groupe</h2>
-                <p class="lead u-text-light mb-0">78, boulevard de la République, 92100 Boulogne-Billancourt Tél: +33 1 77 19 32 10</p>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active w-100 mx-auto">
+            <div class="d-block my-4 slick-slide">
+                <!-- Testimonials -->
+                <div class="u-slick-zoom__slide text-center">
+                    <div class="card border-0 shadow-sm">
+                        <div class="card-body p-7">
+                            <p class="mb-0">The template is really nice and offers quite a large set of options. It's beautiful and the coding is done quickly and seamlessly. Thank you!</p>
+                        </div>
+                    </div>
+                    <div class="position-relative z-index-2 mt-n5 mb-3">
+                        <div class="u-avatar mx-auto">
+                            <%= image_tag asset_pack_path('init/bootstrap/theme/img/100x100/img1.jpg'), :alt => "image", :class => "img-fluid rounded-circle" %>
+                        </div>
+                    </div>
+                    <h4 class="h6 mb-0">inSiti</h4>
+                </div>
+                <!-- End Testimonials -->
             </div>
-            <!-- End Title -->
         </div>
 
-        <!-- Devices v2 -->
-        <div class="d-none d-lg-block">
-            <!-- SVG Tablet Mockup -->
-            <div class="u-devices-v2__tablet">
-                <figure class="w-75 u-devices-v2__tablet-svg">
-                    <%= image_tag asset_pack_path('init/bootstrap/theme/img/533x711/img2.jpg'), :alt => "image", :class => "fl-img"%>
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                        viewBox="0 0 603 892" style="enable-background:new 0 0 603 892;" xml:space="preserve">
-                        
-                        <path id="BG_Color" class="u-fill-white" d="M603,51.8v788.5c0,28.5-23.3,51.8-51.8,51.8H51.8C23.3,892,0,868.7,0,840.2L0,51.8
-                            C0,23.3,23.3,0,51.8,0l499.5,0C579.7,0,603,23.3,603,51.8z"/>
-                        <circle id="tabletFrameTouchID1" class="u-fill-gray-75" cx="302.5" cy="846.5" r="25.5"/>
-                        <circle id="tabletFrameCameraID1" class="u-fill-gray-75" cx="301.8" cy="45.9" r="6.2"/>
-                        <g>
-                            <defs>
-                            <rect id="tabletFrameID1" x="36" y="86" width="533" height="711"/>
-                            </defs>
-                            <clipPath id="tabletFrameID2">
-                            <use xlink:href="#tabletFrameID1"  style="overflow:visible;"/>
-                            </clipPath>
-                            <g style="clip-path:url(#tabletFrameID2);">
-                            <!-- Apply your (533px width to 711px height) image here -->
-                            </g>
-                            <use class="u-fill-none u-stroke-light-blue-125" xlink:href="#tabletFrameID1" stroke-miterlimit="10" style="overflow: visible;"/>
-                        </g>
-                    </svg>
-                </figure>
+        <div class="carousel-item w-100 mx-auto ">
+            <div class="d-block my-4 slick-slide">
+                <!-- Testimonials -->
+                <div class="u-slick-zoom__slide text-center">
+                    <div class="card border-0 shadow-sm">
+                        <div class="card-body p-7">
+                            <p class="mb-0">The template is really nice and offers quite a large set of options. It's beautiful and the coding is done quickly and seamlessly. Thank you!</p>
+                        </div>
+                    </div>
+                    <div class="position-relative z-index-2 mt-n5 mb-3">
+                        <div class="u-avatar mx-auto">
+                            <%= image_tag asset_pack_path('init/bootstrap/theme/img/100x100/img1.jpg'), :alt => "image", :class => "img-fluid rounded-circle" %>
+                        </div>
+                    </div>
+                    <h4 class="h6 mb-0">Projets-locaux</h4>
+                </div>
+                <!-- End Testimonials -->
             </div>
-            <!-- End SVG Tablet Mockup -->
-
-            <!-- SVG Phone Mockup -->
-            <div class="u-devices-v2__phone b-n22">
-            <figure class="w-75 u-devices-v2__phone-svg">
-                <%= image_tag asset_pack_path('init/bootstrap/theme/img/282x500/img2.jpg'), :alt => "image", :class => "fr-img"%>
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                    viewBox="0 0 317.5 665" style="enable-background:new 0 0 317.5 665;" xml:space="preserve">
-                <path class="u-fill-white" d="M263,666H54c-29.7,0-54-24.3-54-54V55C0,25.3,24.3,1,54,1h209c29.7,0,54,24.3,54,54v557
-                    C317,641.7,292.7,666,263,666z"/>
-                <circle class="u-fill-gray-75" cx="159.5" cy="619.5" r="25.5"/>
-                <path class="u-fill-gray-75" fill-rule="evenodd" clip-rule="evenodd" d="M180,52h-42c-2.2,0-4-1.8-4-4v0c0-2.2,1.8-4,4-4h42c2.2,0,4,1.8,4,4v0C184,50.2,182.2,52,180,52z"/>
-                <g>
-                    <defs>
-                    <rect id="phoneFrameID1" x="19.4" y="81.3" width="280" height="500"/>
-                    </defs>
-                    <clipPath id="phoneFrameID2">
-                    <use xlink:href="#phoneFrameID1"  style="overflow:visible;"/>
-                    </clipPath>
-                    <g style="clip-path:url(#phoneFrameID2);">
-                    <!-- Apply your (282px width to 500px height) image here -->
-                    </g>
-                    <use class="u-fill-none u-stroke-light-blue-125" xlink:href="#phoneFrameID1" stroke-miterlimit="10" style="overflow: visible;"/>
-                </g>
-                </svg>
-            </figure>
-            </div>
-            <!-- End SVG Phone Mockup -->
         </div>
-        <!-- End Devices v2 -->
+    
+        <div class="carousel-item w-100 mx-auto">
+            <div class="d-block my-4 slick-slide">
+                <!-- Testimonials -->
+                <div class="u-slick-zoom__slide text-center">
+                    <div class="card border-0 shadow-sm">
+                        <div class="card-body p-7">
+                            <p class="mb-0">The template is really nice and offers quite a large set of options. It's beautiful and the coding is done quickly and seamlessly. Thank you!</p>
+                        </div>
+                    </div>
+                    <div class="position-relative z-index-2 mt-n5 mb-3">
+                        <div class="u-avatar mx-auto">
+                            <%= image_tag asset_pack_path('init/bootstrap/theme/img/100x100/img1.jpg'), :alt => "image", :class => "img-fluid rounded-circle" %>
+                        </div>
+                    </div>
+                    <h4 class="h6 mb-0">Loop</h4>
+                </div>
+                <!-- End Testimonials -->
+            </div>
+        </div>
+    
+        <div class="carousel-item w-100 mx-auto">
+                <div class="d-block my-4 slick-slide">
+                    <!-- Testimonials -->
+                    <div class="u-slick-zoom__slide text-center">
+                        <div class="card border-0 shadow-sm">
+                            <div class="card-body p-7">
+                                <p class="mb-0">The template is really nice and offers quite a large set of options. It's beautiful and the coding is done quickly and seamlessly. Thank you!</p>
+                            </div>
+                        </div>
+                        <div class="position-relative z-index-2 mt-n5 mb-3">
+                            <div class="u-avatar mx-auto">
+                                <%= image_tag asset_pack_path('init/bootstrap/theme/img/100x100/img1.jpg'), :alt => "image", :class => "img-fluid rounded-circle" %>
+                            </div>
+                        </div>
+                        <h4 class="h6 mb-0">Oppn</h4>
+                    </div>
+                    <!-- End Testimonials -->
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+</div>
 
-        <!-- SVG Background Shape -->
-        <figure class="w-100 u-content-centered-y position-absolute-bottom-right-0">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                viewBox="0 0 1653 222.1" style="enable-background:new 0 0 1653 222.1;" xml:space="preserve">
-            <g opacity=".3">
-                <path class="u-fill-none u-stroke-white" stroke-miterlimit="10" d="M0.5,200.2c0,0,1.3,0.4,3.8,1.2"/>
-                <path class="u-fill-none u-stroke-white" stroke-miterlimit="10" stroke-dasharray="7.9643,7.9643" d="M12,203.4c31.8,8.4,125.8,28.7,233.9,11.3c74.3-12,150.4-23.1,219.4-55c51.4-23.8,93.7-64.1,147.1-84.2
-                c24.2-9.1,49.4-15.5,74.7-20.5c65.8-12.9,137.3-16.7,205.9-8c67.6,8.6,125.9,33.9,179.7,52.6c335.2,116.6,538.6-59.1,574.2-93.5"
-                />
-                <path class="u-fill-none u-stroke-white" stroke-miterlimit="10" d="M1649.7,3.4c1.8-1.9,2.8-2.9,2.8-2.9"/>
-            </g>
-            <g>
-                <circle class="u-fill-none u-stroke-white" stroke-width="12" stroke-miterlimit="10" stroke-opacity=".15" cx="1286.1" cy="139.1" r="7.9"/>
-                <circle class="u-fill-none u-stroke-white" stroke-width="5" stroke-miterlimit="10" cx="1286.1" cy="139.1" r="4.5"/>
-            </g>
-            <g>
-                <circle class="u-fill-none u-stroke-white" stroke-width="12" stroke-miterlimit="10" stroke-opacity=".15" cx="597.1" cy="82.1" r="7.9"/>
-                <circle class="u-fill-none u-stroke-white" stroke-width="5" stroke-miterlimit="10" cx="597.1" cy="82.1" r="4.5"/>
-            </g>
-            <g>
-                <circle class="u-fill-none u-stroke-white" stroke-width="12" stroke-miterlimit="10" stroke-opacity=".15" cx="448.1" cy="166.1" r="7.9"/>
-                <circle class="u-fill-none u-stroke-white" stroke-width="5" stroke-miterlimit="10" cx="448.1" cy="166.1" r="4.5"/>
-            </g>
-            </svg>
-        </figure>
-        <!-- End SVG Background Shape -->
+
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators text-success">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+    </ol>
+    <div class="carousel-inner w-50 mx-auto">
+        <!-- Testimonial 1 -->
+        <div class="carousel-item text-center active">
+            <div class="d-block w-100 ">
+                <div class="card border-0 shadow-sm">
+                    <div class="card-body p-7">
+                        <p class="mb-0">The template is really nice and offers quite a large set of options. It's beautiful and the coding is done quickly and seamlessly. Thank you!</p>
+                    </div>
+                </div>
+                <div class="position-relative z-index-2 mt-n5 mb-3">
+                    <div class="u-avatar mx-auto">
+                        <%= image_tag asset_pack_path('init/bootstrap/theme/img/100x100/img1.jpg'), :alt => "image", :class => "img-fluid rounded-circle" %>
+                    </div>
+                </div>
+                <h4 class="h6 mb-0">inSiti</h4>
+                <p>This is block 1 </p>
+            </div>
+        </div>
+        <!-- End Testimonial 1 -->
+
+        <!-- Testimonial 2 -->
+        <div class="carousel-item text-center ">
+            <div class="d-block w-100 ">
+                <div class="card border-0 shadow-sm">
+                    <div class="card-body p-7">
+                        <p class="mb-0">The template is really nice and offers quite a large set of options. It's beautiful and the coding is done quickly and seamlessly. Thank you!</p>
+                    </div>
+                </div>
+                <div class="position-relative z-index-2 mt-n5 mb-3">
+                    <div class="u-avatar mx-auto">
+                        <%= image_tag asset_pack_path('init/bootstrap/theme/img/100x100/img1.jpg'), :alt => "image", :class => "img-fluid rounded-circle" %>
+                    </div>
+                </div>
+                <h4 class="h6 mb-0">inSiti</h4>
+                <p>This is block 2 </p>
+            </div>
+        </div>
+        <!-- End Testimonial 2 -->
+
+        <!-- Testimonial 3 -->
+        <div class="carousel-item text-center ">
+            <div class="d-block w-100 ">
+                <div class="card border-0 shadow-sm">
+                    <div class="card-body p-7">
+                        <p class="mb-0">The template is really nice and offers quite a large set of options. It's beautiful and the coding is done quickly and seamlessly. Thank you!</p>
+                    </div>
+                </div>
+                <div class="position-relative z-index-2 mt-n5 mb-3">
+                    <div class="u-avatar mx-auto">
+                        <%= image_tag asset_pack_path('init/bootstrap/theme/img/100x100/img1.jpg'), :alt => "image", :class => "img-fluid rounded-circle" %>
+                    </div>
+                </div>
+                <h4 class="h6 mb-0">inSiti</h4>
+                <p>This is block 3 </p>
+            </div>
+        </div>
+        <!-- End Testimonial 3 -->
+
+        <!-- Testimonial 4 -->
+        <div class="carousel-item text-center ">
+            <div class="d-block w-100 ">
+                <div class="card border-0 shadow-sm">
+                    <div class="card-body p-7">
+                        <p class="mb-0">The template is really nice and offers quite a large set of options. It's beautiful and the coding is done quickly and seamlessly. Thank you!</p>
+                    </div>
+                </div>
+                <div class="position-relative z-index-2 mt-n5 mb-3">
+                    <div class="u-avatar mx-auto">
+                        <%= image_tag asset_pack_path('init/bootstrap/theme/img/100x100/img1.jpg'), :alt => "image", :class => "img-fluid rounded-circle" %>
+                    </div>
+                </div>
+                <h4 class="h6 mb-0">inSiti</h4>
+                <p>This is block 4 </p>
+            </div>
+        </div>
+        <!-- End Testimonial 4 -->
+
+        <!-- Testimonial 5 -->
+        <div class="carousel-item text-center ">
+            <div class="d-block w-100 ">
+                <div class="card border-0 shadow-sm">
+                    <div class="card-body p-7">
+                        <p class="mb-0">The template is really nice and offers quite a large set of options. It's beautiful and the coding is done quickly and seamlessly. Thank you!</p>
+                    </div>
+                </div>
+                <div class="position-relative z-index-2 mt-n5 mb-3">
+                    <div class="u-avatar mx-auto">
+                        <%= image_tag asset_pack_path('init/bootstrap/theme/img/100x100/img1.jpg'), :alt => "image", :class => "img-fluid rounded-circle" %>
+                    </div>
+                </div>
+                <h4 class="h6 mb-0">inSiti</h4>
+                <p>This is block 5 </p>
+            </div>
+        </div>
+        <!-- End Testimonial 5 -->
     </div>
-    <!-- End Devices v2 Section -->
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon text-primary" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon text-primary" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
