--- a/frontend/init/stylesheet/bishal.css
+++ b/frontend/init/stylesheet/bishal.css
@@ -291,6 +291,12 @@ figure {
   background-image: url(../bootstrap/theme/img/bg-shapes/bg1.png);
 }
 
+.hw-100{
+  max-width: 100%;
+  max-height: 100%;
+  height: 100%;
+  width: 100%;
+}
 
 .hero-img-icon1--transform{
   transform: matrix(0.3347, 0, 0, 0.3347, 35, -185);
@@ -300,15 +306,15 @@ figure {
 }
 
 .hero-img-icon2--transform{
-  transform: matrix(0.3347, 0, 0, 0.3347, 65, -250);
-  width: 35%;
+  transform: matrix(0.3347, 0, 0, 0.3347, 75, -245);
+  width: 30%;
   border: 10px solid #fff;
   border-radius: 50%;
 }
 
 .hero-img-icon3--transform{
-  transform: matrix(0.3347, 0, 0, 0.3347, 430, -520);
-  width: 30%;
+  transform: matrix(0.3347, 0, 0, 0.3347, 400, -350);
+  width: 35%;
   border: 10px solid #fff;
   border-radius: 50%;
 }
@@ -321,15 +327,30 @@ figure {
 }
 
 .hero-img-icon5--transform{
-  transform: matrix(0.3347, 0, 0, 0.3347, 75, -325);
+  transform: matrix(0.3347, 0, 0, 0.3347, -130, -300);
   width: 35%;
   border-radius: 50%;
 }
 
-
 .b-n22{
   bottom: -22% !important;
 }
+
+.angle-icon{
+  color: #082186;
+  font-size: 3rem;
+}
+
+.u-avatar-modified{
+  width: 6rem;
+  height: 4rem;
+}
+
+.testimonial-bg{
+  background-image: url(../bootstrap/theme/img/bg-shapes/bg3.png);
+  background-size: cover;
+}
+
 .fl-img{
   width: 100%;
   margin-top: 1rem;
@@ -345,19 +366,17 @@ figure {
   
 }
 
-/*     
-
-transform="matrix(0.3347 0 0 0.3347 161.0156 95.0156)"
-*/
-
-.scroll{ color: #377dff; text-decoration: none; }
+.scroll{ 
+  color: #377dff; 
+  text-decoration: none; 
+}
 
 .scroll:hover{
   color: #dd4306;
 }
 .arrow {
   text-align: center;
-  margin: 8% 0;
+  margin: -5% 0 8% 0;
 }
 .bounce {
   -moz-animation: bounce 2s infinite;
@@ -376,3 +395,17 @@ transform="matrix(0.3347 0 0 0.3347 161.0156 95.0156)"
     transform: translateY(-15px);
   }
 }
+
+
+
+@media(max-width:991px){  
+  .arrow{
+    display: none;
+  }
+
+  .pt-15{
+    padding-top: 15rem !important;
+  }
+}
+
+
