--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -393,7 +393,7 @@
                     <!-- Info -->
                     <div class="mb-4">
                         <h3 class="h5">Pensé par ceux qui l’utilisent</h3>
-                        <p class="mb-md-0">Achieve virtually any look and layout from within the one template.</p>
+                        <p class="mb-md-0">inSiti dialogue avec les territoires et l’ensemble des acteurs du commerce de proximité pour identifier les besoins et les traduire en solutions numériques.</p>
                     </div>
                     <!-- End Info -->
                 </div>
@@ -542,7 +542,7 @@
                     <!-- Info -->
                     <div class="mb-4">
                         <h3 class="h5">Testé dans les territoires</h3>
-                        <p class="mb-md-0">Find what you need in one template and combine features at will.</p>
+                        <p class="mb-md-0">Les différentes apps, développées ou absorbées par inSiti sont d’abord testées sur un panel de territoires avant d’être mises à disposition de l’ensemble des utilisateurs déjà présent.</p>
                     </div>
                     <!-- End Info -->
                 </div>
@@ -774,7 +774,7 @@
                     <!-- Info -->
                     <div class="mb-4">
                         <h3 class="h5">Le pilotage de la performance</h3>
-                        <p class="mb-md-0">The time has come to bring those ideas and plans to life.</p>
+                        <p class="mb-md-0">inSiti effectue une mesure régulière de l’efficacité des dispositifs de l’écosystème et développe des outils de pilotage de la performance en vue de favoriser des résultats visibles sur le terrain.</p>
                     </div>
                     <!-- End Info -->
                 </div>
@@ -866,8 +866,8 @@
 
                         <!-- Info -->
                         <div class="u-stats-v1__info">
-                            <h4 class="h4 text-danger">2+</h4>
-                            <p class="small mb-0">applications en 1 an</p>
+                            <h4 class="h4 text-danger">+2</h4>
+                            <p class="small mb-0">applications innovantes par an</p>
                         </div>
                         <!-- Info -->
                     </div>
@@ -892,7 +892,7 @@
 
                         <!-- Info -->
                         <div class="u-stats-v1__info">
-                            <h4 class="h4 text-success">40%+</h4>
+                            <h4 class="h4 text-success">+40%</h4>
                             <p class="small mb-0">de visiteurs sur nos apps en 2018</p>
                         </div>
                         <!-- Info -->
@@ -906,7 +906,7 @@
 
 
     <!-- Testimonials section -->
-    <div id="carouselExampleIndicators" class="carousel slide mb-7 testimonial-bg" data-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide mb-7 u-space-3" data-ride="carousel">
         <div class="container space-2 space-md-3 ">
             <!-- Title -->
             <div class="w-md-80 w-lg-50 text-center mx-md-auto mb-9">
@@ -1012,8 +1012,6 @@
     </div>
     <!-- End Testimonials section>
 
-     
-
 </main>
 
 <!-- ========== FOOTER ========== -->
@@ -1033,8 +1031,9 @@
                     <%= image_tag asset_pack_path('init/bootstrap/theme/svg/logos/insiti-group_blc.svg'), :alt => "image", :class => "img-fluid" %>
                 </a>
                 <!-- End Logo -->
-                
-                <p class="lead u-text-light mt-2 mb-0">78, boulevard de la République, 92100 Boulogne-Billancourt Tél: +33 1 77 19 32 10</p>
+
+                <p class="mt-3 u-text-light mb-0">78, boulevard de la République, 92100 Boulogne-Billancourt</p>
+                <p class="u-text-light">Tél: +33 1 77 19 32 10</p>
             </div>
             <!-- End Title -->
         </div>
