--- a/frontend/init/stylesheet/bishal.css
+++ b/frontend/init/stylesheet/bishal.css
@@ -410,22 +410,77 @@ figure {
 /* ================= Conceptstor ====================== */
 
 body{
+ /* font-family: 'Signika', sans-serif !important;
+  font-size: 16px;
+ */
+}
+
+.new-font{
   font-family: 'Signika', sans-serif !important;
+}
+
+.mw-95{
+  max-width: 95%;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.custom-search{
+  background-color: #efe0e094;
+  border: 0px solid #d4d7dd;
 }
 
 .text-custom{
   color: #0f3552c9;
 }
+
 .bg-color{
-  background: linear-gradient(1deg, #eef2f7 0%, #eef2f7 0%, #9251AC 71%, #9251AC 100%);
+  background: linear-gradient(1deg, #eef2f782 0%, #eef2f7b0 0%, #e0d8e296 71%, #eee6f1a8 100%);
 }
 
-.blog_card-bg{
+
+.bg-img{
+  background-image: url(../bootstrap/theme/img/bg-shapes/bg8.png);
+  background-repeat: no-repeat;
+  height: 50vh;
+  background-size: cover;
+  background-position: center;
+}
+
+/* background: linear-gradient(1deg, #eef2f7 0%, #eef2f7 0%, #9251AC 71%, #9251AC 100%); */
+/* background: linear-gradient(190deg, #8AE5E4 0%, #8AE5E4 30%, #B4F3B6 70%, #B4F3B6 100%); */
+/* background: linear-gradient(195deg, #9251AC 0%, #9251AC 30%, #D782D9 70%, #D782D9 100%); */
+/* background: linear-gradient(180deg, #9251AC 0%, #D782D9 50%, #F6A4EB 100%) */
+
+
+.text-purple{
+  color: #9251AC;
+}
+
+.lh-1{
+  line-height: 1.5rem !important;
+}
+
+.blog_card-bg--img1{
   background-image: url(../bootstrap/theme/img/500x550/img2.jpg);
+}
+
+.blog_card-bg--img2{
+  background-image: url(../bootstrap/theme/img/500x550/img3.jpg);
+}
+
+.blog_card-bg--img3{
+  background-image: url(../bootstrap/theme/img/500x550/img6.jpg);
 }
 
 .white-border-1{
   border: 1px solid #fff;
+  border-radius: 5px;
+}
+
+.secondary-border-1{
+  border: 1px solid #77838f;
   border-radius: 5px;
 }
 
@@ -446,9 +501,8 @@ body{
   min-width: 250px !important;
 }
 
-
-
-
-/* background: linear-gradient(190deg, #8AE5E4 0%, #8AE5E4 30%, #B4F3B6 70%, #B4F3B6 100%); */
-/* background: linear-gradient(195deg, #9251AC 0%, #9251AC 30%, #D782D9 70%, #D782D9 100%); */
-/*   background: linear-gradient(180deg, #9251AC 0%, #D782D9 50%, #F6A4EB 100%) */
+@media(max-width: 991px){
+  .no-display{
+    display: none;
+  }
+}
